test/classes/nilability/demo5.good
demo5.chpl:14: error: halt reached - argument to ! is nil
